--- a/package.json
+++ b/package.json
@@ -13,9 +13,17 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "type": "commonjs",
+  "type": "module",
   "bugs": {
     "url": "https://github.com/EslamMhamed/prisma-crash/issues"
   },
-  "homepage": "https://github.com/EslamMhamed/prisma-crash#readme"
+  "homepage": "https://github.com/EslamMhamed/prisma-crash#readme",
+  "devDependencies": {
+    "@types/node": "^25.0.2",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.9.3"
+  },
+  "dependencies": {
+    "prisma": "^7.1.0"
+  }
 }
